Version 0.7
  * added support for playlists (m3u, pls)
    new configuration option: "playlist representation"
  ** "file": playlists are send as playlist files
  ** "container": playlists are shown as playlist containers
  
  * initial support for UPnP Eventing
  
  * fixed transcoding
  ** transcoding thread was started on HTTP HEAD request
  ** implemented transcoding cache
     parallel request of the same file will
     not start several transcoding threads
  ** speed up memory reallocation

  * code cleanup
  ** moved transcoding functions from
     CHTTPMessage object to CTranscodingCache
  ** begun moving http message parsing from 
     CHTTPMessage object to CHTTPParser

  * uses libuuid for real UUIDs under linux/unix if available
  * fixed some minor memory leaks

  * fixed bug #1504778
  ** by mistake fuppes expected a blank in the SSDP-Messages where none is needed
  ** it now correctly shows up on Win XP
  * win32: updated pcre.dll 5.0 to pcre3.dll 6.4

Version 0.5.3 (2006-10-03)  
  * added initial vob support
  * added wmv support
  * added initial vdr file support (for Telegent TG 100)
  * added FLAC transcoding
  * fixed UTF-8 conversion of file and directory names
  
  * webinterface
  ** Status page shows the number of shared objects
  ** completely configurable via webinterface
  
  * HTTP-Server
  ** reduced thread mutex locking.
     HTTP-request are handled much faster
  ** fixed a huge memory leak.
     HTTP-Response objects where not freed :(
  
  * config file will be re read before
    rebuilding the database. there is no need
    to restart fuppes after adding or removing
    shared directories.

Version 0.5.2 (2006-09-10)
  * HTTP-server cleanup
  * fixed AVI-playback bug for Telegent TG100  
  * added bmp, png and gif support
  * (win32) updated SQLite to 3.3.7

  * LameWrapper
  ** fixed seg fault on missing libmp3lame.so concerning fuppes
     compiled with lame support
  ** searches for libmp3lame.so and libmp3lame.so.0
